<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/new_group_button"
        android:enabled="true"
        android:icon="@drawable/ic_group_add"
        android:title="@string/new_group"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/refresh_button"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings_button"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>